--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,11 +8,43 @@ on:
 
 jobs:
 
-  build:
-
+  
+  build_docker_image:
+    name: Build Docker Image
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag devops-tp-up:$(date +%s)
+
+
+  push_to_docker_hub_registry:
+    name: Push Docker image to docker hub
+    runs-on: ubuntu-latest
+    needs: build_docker_image
+    
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v3
+      
+      - name: Log in to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PW }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ github.repository }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./build/Dockerfile.prod
+          push: true
+          tags: ${{ github.repository }}:${{ github.sha }}
+          labels: ${{ steps.meta.outputs.labels }}
