--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
       - name: Log in to docker hub
         uses: docker/login-action@v2
@@ -43,8 +46,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./build/Dockerfile.prod
           push: true
           tags: ${{ github.repository }}:${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
