--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,6 +46,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
+          context: .
+          file: .build/Dockerfile.prod
           push: true
-          tags: ${{ github.repository }}
-          labels: ${{ steps.meta.outputs.labels }}
