--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,3 +49,4 @@ jobs:
           context: .
           file: .build/Dockerfile.prod
           push: true
+          tags: ${{ github.repository }}
