--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,36 +1,43 @@
-name: Docker Image CI
+name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
-
-  
-  build_docker_image:
-    name: Build Docker Image
+  build_and_test:
+    name: Build app and run test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.17.1]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag devops-tp-up:$(date +%s)
-
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build project
+        run: npm run build --if-present
+      - name: Run tests
+        run: npm test
 
   push_to_docker_hub_registry:
     name: Push Docker image to docker hub
     runs-on: ubuntu-latest
-    needs: build_docker_image
-    
+    needs: build_and_test
+
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
       - name: Log in to docker hub
         uses: docker/login-action@v2
         with:
@@ -47,6 +54,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile.prod
+          file: ./build/Dockerfile.prod
           push: true
-          tags: ${{ github.repository }}
+          tags: ${{ github.repository }}:${{ github.sha }}
