--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./build/Dockerfile.prod
+          context: ./app
+          file: ./app/build/Dockerfile.prod
           push: true
           tags: ${{ github.repository }}:${{ github.sha }}
