--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,32 +7,12 @@ on:
     branches: ['main']
 
 jobs:
-  build_and_test:
-    name: Build app and run test
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.17.1]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Build project
-        run: npm run build --if-present
-      - name: Run tests
-        run: npm test
+  
 
   push_to_docker_hub_registry:
     name: Push Docker image to docker hub
     runs-on: ubuntu-latest
-    needs: build_and_test
+    
 
     steps:
       - name: Check out repo
@@ -54,6 +34,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./app
-          file: ./app/build/Dockerfile.prod
+          file: ./app/Dockerfile.prod
           push: true
           tags: ${{ github.repository }}:${{ github.sha }}
