--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ./app
-          file: ./app/Dockerfile.prod
+          context: .
+          file: ./Dockerfile.prod
           push: true
           tags: ${{ github.repository }}:${{ github.sha }}
